fixed dropdown menu not showing over columns

--- a/src/stylesheets/boardView.scss
+++ b/src/stylesheets/boardView.scss
@@ -9,4 +9,5 @@
     position: absolute;
     right: 5%;
     bottom : 20%;
+    z-index: -1;
 }
